# backend/internal/infrastructure/ent/nurserymenusetting.go
@@ -1,0 +1,115 @@
+// Code generated by ent, DO NOT EDIT.
+
+package ent
+
+import (
+	"fmt"
+	"strings"
+	"time"
+
+	"entgo.io/ent"
+	"entgo.io/ent/dialect/sql"
+	"github.com/yone-k/yone-discord-bot/backend/internal/infrastructure/ent/nurserymenusetting"
+)
+
+// NurseryMenuSetting is the model entity for the NurseryMenuSetting schema.
+type NurseryMenuSetting struct {
+	config `json:"-"`
+	// ID of the ent.
+	ID string `json:"id,omitempty"`
+	// ChannelID holds the value of the "channel_id" field.
+	ChannelID string `json:"channel_id,omitempty"`
+	// UpdatedAt holds the value of the "updated_at" field.
+	UpdatedAt    time.Time `json:"updated_at,omitempty"`
+	selectValues sql.SelectValues
+}
+
+// scanValues returns the types for scanning values from sql.Rows.
+func (*NurseryMenuSetting) scanValues(columns []string) ([]any, error) {
+	values := make([]any, len(columns))
+	for i := range columns {
+		switch columns[i] {
+		case nurserymenusetting.FieldID, nurserymenusetting.FieldChannelID:
+			values[i] = new(sql.NullString)
+		case nurserymenusetting.FieldUpdatedAt:
+			values[i] = new(sql.NullTime)
+		default:
+			values[i] = new(sql.UnknownType)
+		}
+	}
+	return values, nil
+}
+
+// assignValues assigns the values that were returned from sql.Rows (after scanning)
+// to the NurseryMenuSetting fields.
+func (_m *NurseryMenuSetting) assignValues(columns []string, values []any) error {
+	if m, n := len(values), len(columns); m < n {
+		return fmt.Errorf("mismatch number of scan values: %d != %d", m, n)
+	}
+	for i := range columns {
+		switch columns[i] {
+		case nurserymenusetting.FieldID:
+			if value, ok := values[i].(*sql.NullString); !ok {
+				return fmt.Errorf("unexpected type %T for field id", values[i])
+			} else if value.Valid {
+				_m.ID = value.String
+			}
+		case nurserymenusetting.FieldChannelID:
+			if value, ok := values[i].(*sql.NullString); !ok {
+				return fmt.Errorf("unexpected type %T for field channel_id", values[i])
+			} else if value.Valid {
+				_m.ChannelID = value.String
+			}
+		case nurserymenusetting.FieldUpdatedAt:
+			if value, ok := values[i].(*sql.NullTime); !ok {
+				return fmt.Errorf("unexpected type %T for field updated_at", values[i])
+			} else if value.Valid {
+				_m.UpdatedAt = value.Time
+			}
+		default:
+			_m.selectValues.Set(columns[i], values[i])
+		}
+	}
+	return nil
+}
+
+// Value returns the ent.Value that was dynamically selected and assigned to the NurseryMenuSetting.
+// This includes values selected through modifiers, order, etc.
+func (_m *NurseryMenuSetting) Value(name string) (ent.Value, error) {
+	return _m.selectValues.Get(name)
+}
+
+// Update returns a builder for updating this NurseryMenuSetting.
+// Note that you need to call NurseryMenuSetting.Unwrap() before calling this method if this NurseryMenuSetting
+// was returned from a transaction, and the transaction was committed or rolled back.
+func (_m *NurseryMenuSetting) Update() *NurseryMenuSettingUpdateOne {
+	return NewNurseryMenuSettingClient(_m.config).UpdateOne(_m)
+}
+
+// Unwrap unwraps the NurseryMenuSetting entity that was returned from a transaction after it was closed,
+// so that all future queries will be executed through the driver which created the transaction.
+func (_m *NurseryMenuSetting) Unwrap() *NurseryMenuSetting {
+	_tx, ok := _m.config.driver.(*txDriver)
+	if !ok {
+		panic("ent: NurseryMenuSetting is not a transactional entity")
+	}
+	_m.config.driver = _tx.drv
+	return _m
+}
+
+// String implements the fmt.Stringer.
+func (_m *NurseryMenuSetting) String() string {
+	var builder strings.Builder
+	builder.WriteString("NurseryMenuSetting(")
+	builder.WriteString(fmt.Sprintf("id=%v, ", _m.ID))
+	builder.WriteString("channel_id=")
+	builder.WriteString(_m.ChannelID)
+	builder.WriteString(", ")
+	builder.WriteString("updated_at=")
+	builder.WriteString(_m.UpdatedAt.Format(time.ANSIC))
+	builder.WriteByte(')')
+	return builder.String()
+}
+
+// NurseryMenuSettings is a parsable slice of NurseryMenuSetting.
+type NurseryMenuSettings []*NurseryMenuSetting
