# backend/internal/infrastructure/ent/nurserymenusetting/nurserymenusetting.go
@@ -1,0 +1,55 @@
+// Code generated by ent, DO NOT EDIT.
+
+package nurserymenusetting
+
+import (
+	"entgo.io/ent/dialect/sql"
+)
+
+const (
+	// Label holds the string label denoting the nurserymenusetting type in the database.
+	Label = "nursery_menu_setting"
+	// FieldID holds the string denoting the id field in the database.
+	FieldID = "key"
+	// FieldChannelID holds the string denoting the channel_id field in the database.
+	FieldChannelID = "channel_id"
+	// FieldUpdatedAt holds the string denoting the updated_at field in the database.
+	FieldUpdatedAt = "updated_at"
+	// Table holds the table name of the nurserymenusetting in the database.
+	Table = "nursery_menu_settings"
+)
+
+// Columns holds all SQL columns for nurserymenusetting fields.
+var Columns = []string{
+	FieldID,
+	FieldChannelID,
+	FieldUpdatedAt,
+}
+
+// ValidColumn reports if the column name is valid (part of the table columns).
+func ValidColumn(column string) bool {
+	for i := range Columns {
+		if column == Columns[i] {
+			return true
+		}
+	}
+	return false
+}
+
+// OrderOption defines the ordering options for the NurseryMenuSetting queries.
+type OrderOption func(*sql.Selector)
+
+// ByID orders the results by the id field.
+func ByID(opts ...sql.OrderTermOption) OrderOption {
+	return sql.OrderByField(FieldID, opts...).ToFunc()
+}
+
+// ByChannelID orders the results by the channel_id field.
+func ByChannelID(opts ...sql.OrderTermOption) OrderOption {
+	return sql.OrderByField(FieldChannelID, opts...).ToFunc()
+}
+
+// ByUpdatedAt orders the results by the updated_at field.
+func ByUpdatedAt(opts ...sql.OrderTermOption) OrderOption {
+	return sql.OrderByField(FieldUpdatedAt, opts...).ToFunc()
+}
